--- a/简书实战/index.html
+++ b/简书实战/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,46 +5,54 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_557573_sqeiy6xohrjatt9.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_557573_2x19qlngiygv6lxr.css">
 </head>
 <body>
 <header>
-    <nav class="">
-        <div class="navbar clearfix">
-            <div class="logo">
-                <img src="https://cdn2.jianshu.io/assets/web/nav-logo-4c7bbafe27adc892f3046e6978459bac.png"
-                     alt="简书logo">
-            </div>
-            <ul class="clearfix layout">
-                <li><a href=""><span class="iconfont icon-compass"></span>发现1</a></li>
-                <li><a href=""><span class="iconfont icon-book"></span>发现2</a></li>
-                <li><a href=""><span class="iconfont icon-bell"></span>发现3</a>
-                    <ul class="child">
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                    </ul>
-                </li>
-                <li class="search">
-                    <input type="text" placeholder="搜索">
-                    <span class="icon icon-search"></span>
-                </li>
+    <a class="logo">
+        <img src="https://cdn2.jianshu.io/assets/web/nav-logo-4c7bbafe27adc892f3046e6978459bac.png"
+             alt="简书logo">
+    </a>
+    <ul class="navbar">
+        <li><a href=""><span class="iconfont icon-compass"></span>发现</a></li>
+        <li><a href=""><span class="iconfont icon-book"></span>关注</a></li>
+        <li><a href=""><span class="iconfont icon-bell"></span>消息</a>
+            <ul class="child">
+                <li><a href="#"><span class="iconfont icon-discuss"></span>评论</a></li>
+                <li><a href="#"><span class="iconfont icon-letter"></span>简信</a></li>
+                <li><a href="#"><span class="iconfont icon-request"></span>投稿请求</a></li>
             </ul>
+        </li>
+    </ul>
+    <div class="search">
+        <input type="text" placeholder="搜索">
+        <span class="iconfont icon-search"></span>
+        <div class="search-panel">
+            <h5 class="clearfix">热门搜索
+                <a class="refresh" href=""><span class="iconfont icon-refresh"></span> 换一批</a>
+            </h5>
+            <a href="">区块链</a>
+            <a href="">旅行青蛙</a>
+            <a href="">无问西东</a>
+            <a href="">手账</a>
+            <a href="">腾讯云</a>
+            <a href="">小程序</a>
         </div>
-    </nav>
+    </div>
     <div class="action">
-            <span class="style-mode icon icon-style-model">
-            </span>
+        <a class="iconfont icon-A" href="#"></a>
+
         <div class="user">
-            <span class="icon icon-avatar"></span>
-            <ul>
+            <img class="avatar" src="https://upload.jianshu.io/users/upload_avatars/9782953/e3b67c5d-48e9-49f9-b716-bb3aaf495c36?imageMogr2/auto-orient/strip|imageView2/1/w/120/h/120" alt="">
+            <span class="iconfont icon-down"></span>
+            <ul class="child">
                 <li><a href="#"><span class="icon icon-user"></span>我的主页</a></li>
                 <li><a href="#"><span class="icon icon-user"></span>我的主页</a></li>
                 <li><a href="#"><span class="icon icon-user"></span>我的主页</a></li>
             </ul>
         </div>
         <a href="#" class="write">
-            <span class="icon icon-write"></span>
+            <span class="iconfont icon-write"></span>
             写文章
         </a>
     </div>
