--- a/简书实战/index.html
+++ b/简书实战/index.html
@@ -14,7 +14,7 @@
              alt="简书logo">
     </a>
     <ul class="navbar">
-        <li><a href=""><span class="iconfont icon-compass"></span>发现</a></li>
+        <li><a class="active" href=""><span class="iconfont icon-compass"></span>发现</a></li>
         <li><a href=""><span class="iconfont icon-book"></span>关注</a></li>
         <li><a href=""><span class="iconfont icon-bell"></span>消息</a>
             <ul class="child">
@@ -46,9 +46,9 @@
             <img class="avatar" src="https://upload.jianshu.io/users/upload_avatars/9782953/e3b67c5d-48e9-49f9-b716-bb3aaf495c36?imageMogr2/auto-orient/strip|imageView2/1/w/120/h/120" alt="">
             <span class="iconfont icon-down"></span>
             <ul class="child">
-                <li><a href="#"><span class="icon icon-user"></span>我的主页</a></li>
-                <li><a href="#"><span class="icon icon-user"></span>我的主页</a></li>
-                <li><a href="#"><span class="icon icon-user"></span>我的主页</a></li>
+                <li><a href="#"><span class="iconfont icon-user"></span>我的主页</a></li>
+                <li><a href="#"><span class="iconfont icon-user"></span>我的主页</a></li>
+                <li><a href="#"><span class="iconfont icon-user"></span>我的主页</a></li>
             </ul>
         </div>
         <a href="#" class="write">
@@ -57,12 +57,64 @@
         </a>
     </div>
 </header>
-<main>
+<section class="layout clearfix">
+    <aside>
+    </aside>
+    <main>
+        <div class="carousel">
+            <div class="carousel-imgs clearfix">
+                <a href="#"><img
+                        src="https://upload.jianshu.io/admin_banners/web_images/4147/46df7fce5657c82bb76d1052d652cc7fef5f9683.jpg?imageMogr2/auto-orient/stripimageView2/1/w/1250/h/540"
+                        alt="">
+                </a>
+                <a href="#"><img
+                        src="https://upload.jianshu.io/admin_banners/web_images/4147/46df7fce5657c82bb76d1052d652cc7fef5f9683.jpg?imageMogr2/auto-orient/stripimageView2/1/w/1250/h/540"
+                        alt="">
+                </a>
+                <a href="#"><img
+                    src="https://upload.jianshu.io/admin_banners/web_images/4147/46df7fce5657c82bb76d1052d652cc7fef5f9683.jpg?imageMogr2/auto-orient/stripimageView2/1/w/1250/h/540"
+                    alt="">
+                </a>
+            </div>
+            <a class="carousel-control left" href=""><</a>
+            <a class="carousel-control right" href="">></a>
+            <div class="carsousel-panel">
+                <a class="carsousel-dot" href="#"></a>
+                <a class="carsousel-dot" href="#"></a>
+                <a class="carsousel-dot" href="#"></a>
+            </div>
+        </div>
+        <div class="label-group">
+            <a class="label" href="">
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书电影
+            </a>
+            <a class="label" href="">
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">电影
+            </a>
+            <a class="label" href="">
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书
+            </a>
+            <a class="label" href="">
+                <img src="https://tvax2.sinaimg.cn/crop.9.0.493.493.180/63ae8f44ly8fkdcotab8uj20e80dpweq.jpg" alt="">旅行在.路上
+            </a>
+            <a class="label" href="">
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">教父
+            </a>
+            <a class="label" href="">
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书电影
+            </a>
+            <a class="label" href="">
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书电影
+            </a>
 
-</main>
-<aside>
+            <a class="more" href="">
+                更热门专题 >
+            </a>
+        </div>
+    </main>
+</section>
 
-</aside>
+
 <footer>
 
 </footer>
