--- a/简书实战/index.html
+++ b/简书实战/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_557573_2x19qlngiygv6lxr.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_557573_zd7a1f5dgse89f6r.css">
 </head>
 <body>
 <header>
@@ -41,7 +41,6 @@
     </div>
     <div class="action">
         <a class="iconfont icon-A" href="#"></a>
-
         <div class="user">
             <img class="avatar" src="https://upload.jianshu.io/users/upload_avatars/9782953/e3b67c5d-48e9-49f9-b716-bb3aaf495c36?imageMogr2/auto-orient/strip|imageView2/1/w/120/h/120" alt="">
             <span class="iconfont icon-down"></span>
@@ -59,6 +58,7 @@
 </header>
 <section class="layout clearfix">
     <aside>
+        555
     </aside>
     <main>
         <div class="carousel">
@@ -84,7 +84,7 @@
                 <a class="carsousel-dot" href="#"></a>
             </div>
         </div>
-        <div class="label-group">
+        <div class="label-group clearfix">
             <a class="label" href="">
                 <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书电影
             </a>
@@ -111,10 +111,106 @@
                 更热门专题 >
             </a>
         </div>
+        <div class="content">
+            <div class="item">
+                <a class="cover" href="" >
+                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                </a>
+                <div class="detail">
+                    <div class="head">
+                        <a class="avatar" href="#">
+                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                        </a>
+                        <a class="username" href="#">格尔黑</a>
+                        <span class="time">2017.12.27 11:07</span>
+                    </div>
+                    <div class="title">
+                        <a href="">
+                            <h3>
+                                孩子，你要勤奋点!
+                            </h3>
+                        </a>
+                    </div>
+
+                    <p>
+                        早晨六点多，到早点供应点吃饭。天色还大黑，路上车辆都开着大灯。 不远处实验小学教学大楼已经灯火通明，与天边的星光连成一片。路上校车闪着警示灯缓缓行驶，就近的学生带着大耳罩从黑...
+                    </p>
+                    <div class="foot">
+                        <a href="＃">心情随笔</a>
+                        <span class="iconfont icon-eye"></span><span>1387</span>
+                        <span class="iconfont icon-comment"></span><span>111</span>
+                        <span class="iconfont icon-heart"></span><span>111</span>
+                        <span class="iconfont icon-money"></span><span>222</span>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <a class="cover" href="" >
+                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                </a>
+                <div class="detail">
+                    <div class="head">
+                        <a class="avatar" href="#">
+                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                        </a>
+                        <a class="username" href="#">格尔黑</a>
+                        <span class="time">2017.12.27 11:07</span>
+                    </div>
+                    <div class="title">
+                        <a href="">
+                            <h3>
+                                孩子，你要勤奋点!
+                            </h3>
+                        </a>
+                    </div>
+
+                    <p>
+                        早晨六点多，到早点供应点吃饭。天色还大黑，路上车辆都开着大灯。 不远处实验小学教学大楼已经灯火通明，与天边的星光连成一片。路上校车闪着警示灯缓缓行驶，就近的学生带着大耳罩从黑...
+                    </p>
+                    <div class="foot">
+                        <a href="＃">心情随笔</a>
+                        <span class="iconfont icon-eye"></span><span>1387</span>
+                        <span class="iconfont icon-comment"></span><span>111</span>
+                        <span class="iconfont icon-heart"></span><span>111</span>
+                        <span class="iconfont icon-money"></span><span>222</span>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <a class="cover" href="" >
+                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                </a>
+                <div class="detail">
+                    <div class="head">
+                        <a class="avatar" href="#">
+                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                        </a>
+                        <a class="username" href="#">格尔黑</a>
+                        <span class="time">2017.12.27 11:07</span>
+                    </div>
+                    <div class="title">
+                        <a href="">
+                            <h3>
+                                孩子，你要勤奋点!
+                            </h3>
+                        </a>
+                    </div>
+
+                    <p>
+                        早晨六点多，到早点供应点吃饭。天色还大黑，路上车辆都开着大灯。 不远处实验小学教学大楼已经灯火通明，与天边的星光连成一片。路上校车闪着警示灯缓缓行驶，就近的学生带着大耳罩从黑...
+                    </p>
+                    <div class="foot">
+                        <a href="＃">心情随笔</a>
+                        <span class="iconfont icon-eye"></span><span>1387</span>
+                        <span class="iconfont icon-comment"></span><span>111</span>
+                        <span class="iconfont icon-heart"></span><span>111</span>
+                        <span class="iconfont icon-money"></span><span>222</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </section>
-
-
 <footer>
 
 </footer>
