--- a/简书实战/index.html
+++ b/简书实战/index.html
@@ -42,7 +42,9 @@
     <div class="action">
         <a class="iconfont icon-A" href="#"></a>
         <div class="user">
-            <img class="avatar" src="https://upload.jianshu.io/users/upload_avatars/9782953/e3b67c5d-48e9-49f9-b716-bb3aaf495c36?imageMogr2/auto-orient/strip|imageView2/1/w/120/h/120" alt="">
+            <img class="avatar"
+                 src="https://upload.jianshu.io/users/upload_avatars/9782953/e3b67c5d-48e9-49f9-b716-bb3aaf495c36?imageMogr2/auto-orient/strip|imageView2/1/w/120/h/120"
+                 alt="">
             <span class="iconfont icon-down"></span>
             <ul class="child">
                 <li><a href="#"><span class="iconfont icon-user"></span>我的主页</a></li>
@@ -58,7 +60,100 @@
 </header>
 <section class="layout clearfix">
     <aside>
-        555
+        <div class="board">
+            <a href="#">
+                <img src="https://cdn2.jianshu.io/assets/web/banner-s-1-b8ff9ec59f72ea88ecc8c42956f41f78.png" alt="">
+            </a>
+            <a href="#">
+                <img src="https://cdn2.jianshu.io/assets/web/banner-s-3-7123fd94750759acf7eca05b871e9d17.png" alt="">
+            </a>
+            <a href="#">
+                <img src="https://cdn2.jianshu.io/assets/web/banner-s-4-b70da70d679593510ac93a172dfbaeaa.png" alt="">
+            </a>
+            <a href="#">
+                <img src="https://cdn2.jianshu.io/assets/web/banner-s-5-291e00e9156f30791fe24e3de9c39171.png" alt="">
+            </a>
+            <a href="#">
+                <img src="https://cdn2.jianshu.io/assets/web/banner-s-6-c4d6335bfd688f2ca1115b42b04c28a7.png" alt="">
+            </a>
+        </div>
+        <div class="download">
+            <a class="clearfix" href="#">
+                <img src="https://cdn2.jianshu.io/assets/web/download-index-side-qrcode-0a0cf38b7413c60bb8d2627fd9eebd00.png"
+                     alt="">
+                <h3>下载简书手机App ></h3>
+                <p>随时随地发现和创作内容</p>
+            </a>
+            <div class="tooltip">
+                <img src="https://cdn2.jianshu.io/assets/web/download-index-side-qrcode-0a0cf38b7413c60bb8d2627fd9eebd00.png" alt="二维码">
+            </div>
+        </div>
+        <div class="recommend clearfix">
+            <h3>推荐作者
+                <a class="refresh" href="#">
+                    <span class="iconfont icon-refresh"></span>
+                    换一批
+                </a>
+            </h3>
+            <ul class="content">
+                <li class="iteam clearfix">
+                    <a class="avatar" href="">
+                        <img src="https://upload.jianshu.io/users/upload_avatars/3678149/b8a58e70-1126-48c9-97e2-8f21a31dfa94.png?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96"
+                             alt="简宝玉avatar">
+                    </a>
+                    <h4>
+                        <a class="concern" href="">+关注</a>
+                        <a class="username" href="#">简宝玉</a>
+                    </h4>
+
+                    <p>写了40k字</p>
+
+                </li>
+                <li class="iteam clearfix">
+                    <a class="avatar" href="">
+                        <img src="https://upload.jianshu.io/users/upload_avatars/3678149/b8a58e70-1126-48c9-97e2-8f21a31dfa94.png?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96"
+                             alt="简宝玉avatar">
+                    </a>
+                    <h4>
+                        <a class="concern" href="">+关注</a>
+                        <a class="username" href="#">简宝玉</a>
+                    </h4>
+
+                    <p>写了40k字</p>
+
+                </li>
+                <li class="iteam clearfix">
+                    <a class="avatar" href="">
+                        <img src="https://upload.jianshu.io/users/upload_avatars/3678149/b8a58e70-1126-48c9-97e2-8f21a31dfa94.png?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96"
+                             alt="简宝玉avatar">
+                    </a>
+                    <h4>
+                        <a class="concern" href="">+关注</a>
+                        <a class="username" href="#">简宝玉</a>
+                    </h4>
+
+                    <p>写了40k字</p>
+
+                </li>
+                <li class="iteam clearfix">
+                    <a class="avatar" href="">
+                        <img src="https://upload.jianshu.io/users/upload_avatars/3678149/b8a58e70-1126-48c9-97e2-8f21a31dfa94.png?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96"
+                             alt="简宝玉avatar">
+                    </a>
+                    <h4>
+                        <a class="concern" href="">+关注</a>
+                        <a class="username" href="#">简宝玉</a>
+                    </h4>
+
+                    <p>写了40k字</p>
+
+                </li>
+
+            </ul>
+            <a class="look-all" href="">
+                查看全部 >
+            </a>
+        </div>
     </aside>
     <main>
         <div class="carousel">
@@ -72,8 +167,8 @@
                         alt="">
                 </a>
                 <a href="#"><img
-                    src="https://upload.jianshu.io/admin_banners/web_images/4147/46df7fce5657c82bb76d1052d652cc7fef5f9683.jpg?imageMogr2/auto-orient/stripimageView2/1/w/1250/h/540"
-                    alt="">
+                        src="https://upload.jianshu.io/admin_banners/web_images/4147/46df7fce5657c82bb76d1052d652cc7fef5f9683.jpg?imageMogr2/auto-orient/stripimageView2/1/w/1250/h/540"
+                        alt="">
                 </a>
             </div>
             <a class="carousel-control left" href=""><</a>
@@ -86,25 +181,31 @@
         </div>
         <div class="label-group clearfix">
             <a class="label" href="">
-                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书电影
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64"
+                     alt="">简书电影
             </a>
             <a class="label" href="">
-                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">电影
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64"
+                     alt="">电影
             </a>
             <a class="label" href="">
-                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64"
+                     alt="">简书
             </a>
             <a class="label" href="">
                 <img src="https://tvax2.sinaimg.cn/crop.9.0.493.493.180/63ae8f44ly8fkdcotab8uj20e80dpweq.jpg" alt="">旅行在.路上
             </a>
             <a class="label" href="">
-                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">教父
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64"
+                     alt="">教父
             </a>
             <a class="label" href="">
-                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书电影
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64"
+                     alt="">简书电影
             </a>
             <a class="label" href="">
-                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64" alt="">简书电影
+                <img src="https://upload.jianshu.io/collections/images/21/20120316041115481.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/64/h/64"
+                     alt="">简书电影
             </a>
 
             <a class="more" href="">
@@ -113,13 +214,15 @@
         </div>
         <div class="content">
             <div class="item">
-                <a class="cover" href="" >
-                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                <a class="cover" href="">
+                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
+                         alt="">
                 </a>
                 <div class="detail">
                     <div class="head">
                         <a class="avatar" href="#">
-                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
+                                 alt="">
                         </a>
                         <a class="username" href="#">格尔黑</a>
                         <span class="time">2017.12.27 11:07</span>
@@ -145,13 +248,15 @@
                 </div>
             </div>
             <div class="item">
-                <a class="cover" href="" >
-                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                <a class="cover" href="">
+                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
+                         alt="">
                 </a>
                 <div class="detail">
                     <div class="head">
                         <a class="avatar" href="#">
-                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
+                                 alt="">
                         </a>
                         <a class="username" href="#">格尔黑</a>
                         <span class="time">2017.12.27 11:07</span>
@@ -177,13 +282,15 @@
                 </div>
             </div>
             <div class="item">
-                <a class="cover" href="" >
-                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                <a class="cover" href="">
+                    <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
+                         alt="">
                 </a>
                 <div class="detail">
                     <div class="head">
                         <a class="avatar" href="#">
-                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240" alt="">
+                            <img src="https://upload.jianshu.io/users/upload_avatars/6416344/5e103cde-c77d-49f9-8a47-2ed4418c564a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
+                                 alt="">
                         </a>
                         <a class="username" href="#">格尔黑</a>
                         <span class="time">2017.12.27 11:07</span>
@@ -209,6 +316,7 @@
                 </div>
             </div>
         </div>
+        <a href="" class="read-more">阅读更多</a>
     </main>
 </section>
 <footer>
