第一版已经完成

--- a/简书实战/index.html
+++ b/简书实战/index.html
@@ -111,15 +111,15 @@
                 </li>
                 <li class="iteam clearfix">
                     <a class="avatar" href="">
-                        <img src="https://upload.jianshu.io/users/upload_avatars/3678149/b8a58e70-1126-48c9-97e2-8f21a31dfa94.png?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96"
+                        <img src="https://upload.jianshu.io/users/upload_avatars/9153226/5feb5101-9fbe-4e2e-9688-b950884f2925.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96"
                              alt="简宝玉avatar">
                     </a>
                     <h4>
                         <a class="concern" href="">+关注</a>
-                        <a class="username" href="#">简宝玉</a>
+                        <a class="username" href="#">寻麦</a>
                     </h4>
 
-                    <p>写了40k字</p>
+                    <p>写了82.2k字 · 883喜欢</p>
 
                 </li>
                 <li class="iteam clearfix">
