--- a/Navigation Bar/index.html
+++ b/Navigation Bar/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nav</title>
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
@@ -22,6 +22,7 @@
                 <li class=""><a href="#">其它</a></li>
             </ul>
         </nav>
+
     </div>
 </body>
 </html>
