--- a/resume/index.html
+++ b/resume/index.html
@@ -2,27 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nav</title>
+    <title>resume</title>
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <div class="topNavBar clearfix">
-        <a href="" class="logo">
-            <span class="rs">RS</span>
-            <span class="card">card</span>
-        </a>
-        <nav>
-            <ul class="clearfix">
-                <li class=""><a href="#">关于</a></li>
-                <li class=""><a href="#">技能</a></li>
-                <li class=""><a href="#">作品</a></li>
-                <li class=""><a href="#">博客</a></li>
-                <li class=""><a href="#">日历</a></li>
-                <li class=""><a href="#">联系方式</a></li>
-                <li class=""><a href="#">其它</a></li>
-            </ul>
-        </nav>
+        <div class="inner">
+            <a href="" class="logo">
+                <span class="rs">RS</span>
+                <span class="card">card</span>
+            </a>
+            <nav>
+                <ul class="clearfix">
+                    <li class=""><a href="#">关于</a></li>
+                    <li class=""><a href="#">技能</a></li>
+                    <li class=""><a href="#">作品</a></li>
+                    <li class=""><a href="#">博客</a></li>
+                    <li class=""><a href="#">日历</a></li>
+                    <li class=""><a href="#">联系方式</a></li>
+                    <li class=""><a href="#">其它</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
+    <div class="banner">
+
+    </div>
+
+    <main>
+        <div class="userCard">
+            <div class="picureAndText clearfix">
+                <div class="picture">
+                    <img width="299" height="347" src="./images/avatar.jpg" alt="avatar">
+                </div>
+                <div class="text">
+                    <span>Hello</span>
+                    <h1>loser</h1>
+                    <p>font-end</p>
+                    <hr>
+                    <dl>
+                        <dt>年龄</dt><dd>23</dd>
+                        <dt>所在城市</dt><dd>北京</dd>
+                        <dt>邮箱</dt><dd>longzhao135@163.com</dd>
+                        <dt>手机</dt><dd>18731910122</dd>
+                    </dl>
+                </div>
+            </div>
+            <footer class="media">
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </footer>
+        </div>
+    </main>
 
 </body>
 </html>
