--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>resume</title>
     <link rel="stylesheet" href="css.css">
+    <script src="//at.alicdn.com/t/font_753218_vojbc8poge.js"></script>
 </head>
 <body>
     <div class="topNavBar clearfix">
@@ -49,9 +50,21 @@
                 </div>
             </div>
             <footer class="media">
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weibo"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-twitter"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                </a>
             </footer>
         </div>
     </main>
