--- a/resume/index.html
+++ b/resume/index.html
@@ -37,7 +37,7 @@
                     <img width="299" height="347" src="./images/avatar.jpg" alt="avatar">
                 </div>
                 <div class="text">
-                    <span>Hello</span>
+                    <span class="hello">Hello</span>
                     <h1>loser</h1>
                     <p>font-end</p>
                     <hr>
