--- a/resume/index.html
+++ b/resume/index.html
@@ -67,6 +67,57 @@
                 </a>
             </footer>
         </div>
+        <div class="download-wrap">
+            <a class="download" href="./index.html" download="resume">download resume</a>
+        </div>
+        <p class="selfinfo">
+            姓名xxx,工作xxx职位xxx <br>
+            技能xxx,精通xxx熟悉xxx
+        </p>
+        <section class="skills">
+            <h2>技能</h2>
+            <ol class="clearfix">
+                <li class="skillItem">
+                    <h3>HTML5&CSS3</h3>
+                    <div class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </li>
+               <li class="skillItem">
+                    <h3>javascript</h3>
+                    <div class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </li>
+                <li class="skillItem">
+                    <h3>Node.js</h3>
+                    <div class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </li>
+                <li class="skillItem">
+                    <h3>React.js</h3>
+                    <div class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </li>
+                <li class="skillItem">
+                    <h3>Vue.js</h3>
+                    <div class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </li>
+                <li class="skillItem">
+                    <h3>JQuery</h3>
+                    <div class="progressBar">
+                        <div class="progress"></div>
+                    </div>
+                </li>
+            </ol>
+        </section>
+        <section>
+            <h2>作品展示区</h2>
+        </section>
     </main>
 
 </body>
