添加画笔功能

--- a/drawingBoard/index.html
+++ b/drawingBoard/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>drawingBoard</title>
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
+    <canvas id="canvas" width="800" height="800">
+
+    </canvas>
+    <div id="tool" class="tool">
+        <button id="pen" class="toolItem">画笔</button>
+        <button id="eraser1" class="toolItem">橡皮</button>
+    </div>
 
 </body>
 <script src="index.js"></script>
