--- a/drawingBoard/index.html
+++ b/drawingBoard/index.html
@@ -13,6 +13,9 @@
     <div id="tool" class="tool">
         <button id="pen" class="toolItem">画笔</button>
         <button id="eraser1" class="toolItem">橡皮</button>
+        <button id="clear" class="toolItem">清除</button>
+        <input id="color" type="color">
+        <input id="range" min="10" type="range">
     </div>
 
 </body>
