--- a/drawingBoard/index.html
+++ b/drawingBoard/index.html
@@ -14,8 +14,11 @@
         <button id="pen" class="toolItem">画笔</button>
         <button id="eraser1" class="toolItem">橡皮</button>
         <button id="clear" class="toolItem">清除</button>
+        <button id="rec" class="toolItem">ret</button>
+        <button id="play" class="toolItem">replay</button>
         <input id="color" type="color">
         <input id="range" min="10" type="range">
+        
     </div>
 
 </body>
