增加滑动导航

--- a/resume/index.html
+++ b/resume/index.html
@@ -17,8 +17,22 @@
                 <ul class="clearfix">
                     <li class=""><a href="#about">关于</a></li>
                     <li class=""><a href="#skills">技能</a></li>
-                    <li class=""><a href="#portfolio">作品</a></li>
-                    <li class=""><a href="#">博客</a></li>
+                    <li class="">
+                        <a class="menuTigger"  href="#portfolio">作品</a>
+                        <ul>
+                            <li><a href="">作品1</a></li>
+                            <li><a href="">作品2</a></li>
+                            <li><a href="">作品3</a></li>
+                        </ul>
+                    </li>
+                    <li class="">
+                        <a class="menuTigger" href="#">博客</a>
+                        <ul>
+                            <li><a href="">作品1</a></li>
+                            <li><a href="">作品2</a></li>
+                            <li><a href="">作品3</a></li>
+                        </ul>
+                    </li>
                     <li class=""><a href="#">日历</a></li>
                     <li class=""><a href="#">联系方式</a></li>
                     <li class=""><a href="#">其它</a></li>
