--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,7 @@
     <title>resume</title>
     <link rel="stylesheet" href="css.css">
     <script src="//at.alicdn.com/t/font_753218_vojbc8poge.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 </head>
 <body>
     <div class="topNavBar clearfix">
