增加滚动元素高亮显示

--- a/resume/index.html
+++ b/resume/index.html
@@ -44,7 +44,7 @@
     <div class="banner">
     </div>
     <main style="margin-top:-340px;">
-        <div class="userCard">
+        <div data-x class="userCard">
             <div data-target="#about" class="picureAndText clearfix">
                 <div class="picture">
                     <img width="299" height="347" src="./images/avatar.jpg" alt="avatar">
@@ -88,7 +88,7 @@
             技能xxx,精通xxx熟悉xxx
         </p>
     </main>
-    <section data-target="#skills" class="skills">
+    <section data-x data-target="#skills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li class="skillItem">
@@ -129,7 +129,7 @@
             </li>
         </ol>
     </section>
-    <section data-target="#portfolio" class="portfolio">
+    <section data-x data-target="#portfolio" class="portfolio">
         <h2>作品展示区</h2>
         <nav>
             <ol class="clearfix">
