--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css.css">
     <script src="//at.alicdn.com/t/font_753218_vojbc8poge.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.10.0/dist/av-min.js"></script>
 </head>
 <body>
     <div class="topNavBar clearfix">
@@ -165,6 +166,14 @@
                 <img src="./images/3.jpg" alt="">
             </div>
         </div>
+    </section>
+    <section class="message ">
+        <form id="form" action="">
+            <input id='text' type="text">
+            <input id='button' type="submit" value='提交留言'>
+        </form>
+        <ul id="lxbox">
+        </ul>
     </section>
     <script src="./js.js"></script>
 </body>
