--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <li><a href="https://weblongzhao.github.io/xdml/resume">resume</a></li>
     <li><a href="https://weblongzhao.github.io/xdml/导航栏">导航栏</a></li>
     <li><a href="https://weblongzhao.github.io/xdml/简书实战">简书实战</a></li>
+    <li><a href="https://weblongzhao.github.io/xdml/animation-resume/index.html">动态简历</a></li>
+       
 </ul>
 </body>
 </html>
